--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE-edge">
   <meta name="viewport" content="width-device-width, initial=scale=1.0">
   <title>DC Professional Portfolio</title>
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/jpg" href="./assets/images/favicon.ico">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Favicon -->
-  <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.png">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
 <!-- Header/Nav Bar -->
   <header>
-    <h1>Welcome to my Portfolio</h1>
+    <h1>DC's Portfolio</h1>
     <nav>
       <ul>
         <li><a href="#aboutme"><i class="fas fa-user"></i> About Me</a></li>
