Changed up page styling a bit

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="section-content flex">
             <!-- Fourstor -->
             <figure class="card-large">
-                <a href="https://pr1me-e1gh7.github.io/fourstor/" target="_blank" rel="noopener noreferrer">
+                <a href="https://pr1me-e1gh7.github.io/fourstor/" target="_blank">
                     <img class="card-image" src="./assets/images/fourstorProject.png"></a>
                 <article class="card-content">
                     <h3 class="card-title">fourSTOR</h3></article></figure>
