Changed hero text

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <img src="./assets/images/dcphoto.jpg" alt="logo image">
     <article class="hero-content">
       <h2>David Caro</h2>
-      <p>Web Developer in training</p>
-      <p>UCF Bootcamp Student</p>
+      <p>Software + Web Developer</p>
+      <p>from Orlando, FL</p>
     </article>
   </figure>
   <main>
