--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h2 class="section-left">About Me</h2>
       <article class="section-right">
         <p>I'm a full-stack web developer that's currently residing in Orlando, FL.
-          Having recently acquired graduated from UCF's Coding Bootcamp course, I've become educated in HTML, CSS, JavaScript, Node.JS, React.JS,
+          Having recently graduated from UCF's Coding Bootcamp course, I've become educated in HTML, CSS, JavaScript, Node.JS, React.JS,
           and other programming languages that'll assist me in any future web development jobs.</p>
       </article>
     </section>
