updated Resume link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="#aboutme"><i class="fas fa-user"></i> About Me</a></li>
         <li><a href="#projects"><i class="fas fa-code"></i> Projects</a></li>
         <li><a href="#contact"><i class="fas fa-address-card"></i> Contact</a></li>
-        <li><a href="https://my.indeed.com/p/davidc-j841cea" target="_blank"><i class="fas fa-briefcase"></i> Resume</a></li>
+        <li><a href="https://drive.google.com/file/d/157yu4DMGOO1Qx-D4fQ_UF0BXG1HgMQ5S/view?usp=sharing" target="_blank"><i class="fas fa-briefcase"></i> Resume</a></li>
       </ul>
     </nav>
   </header>
