updated w/new project

--- a/index.html
+++ b/index.html
@@ -55,12 +55,18 @@
       <h2 class="section-left">Projects</h2>
         <div class="section-right">
           <div class="section-content flex">
-            <!-- Fourstor -->
+            <!-- ComicStans -->
             <figure class="card-large">
-                <a href="https://pr1me-e1gh7.github.io/fourstor/" target="_blank">
-                    <img class="card-image" src="./assets/images/fourstorProject.png"></a>
+                <a href="https://comicstans.herokuapp.com/" target="_blank">
+                    <img class="card-image" src="./assets/images/comicstans-preview.png"></a>
                 <article class="card-content">
-                    <h3 class="card-title">fourSTOR</h3></article></figure>
+                    <h3 class="card-title">ComicStans</h3></article></figure>
+            <!-- Fourstor -->
+            <figure class="card-small">
+              <a href="https://pr1me-e1gh7.github.io/password-generator/" target="_blank">
+                  <img class="card-image" src="./assets/images/fourstorProject.png"></a>
+              <article class="card-content">
+                  <h3 class="card-title">fourSTOR</h3></article></figure>
             <!-- Password Generator -->
             <figure class="card-small">
                 <a href="https://pr1me-e1gh7.github.io/password-generator/" target="_blank">
@@ -79,14 +85,6 @@
                   <img class="card-image" src="./assets/images/weatherDashboard.png"></a>
               <article class="card-content">
                   <h3 class="card-title">Weather Dashboard</h3>
-                  <p class="card-subtitle">Coming Soon</p></article></figure>
-            <!-- Day Planner -->
-            <figure class="card-small">
-              <a href="https://pr1me-e1gh7.github.io/day-planner/" target="_blank">
-                  <img class="card-image" src="./assets/images/dayPlanner.png"></a>
-              <article class="card-content">
-                  <h3 class="card-title">Day Planner</h3>
-                  <p class="card-subtitle">Coming Soon</p></article></figure>
           </div>
         </div>
       </section>
